# c_suite_mi_dashboard

./: .gitignore  EFFICIENCY_REPORT.md  README.md  pyproject.toml  test_snow_integration.py
.github/: pytest.ini
.github/workflows/: ci.yml
app/: main.py
config/: field_map.yaml
data/: .gitkeep  sample_incidents.csv
infra/: Dockerfile  fly.toml
src/: kpis.py  snow_client.py  transforms.py
tests/: test_csv_path.py  test_kpis.py  test_query_structure.py  test_saved_filters.py  test_snow_client.py  test_snow_data.py  test_snow_requests.py
tests/data/: test_incidents.csv
